@@ -273,20 +273,26 @@ Span.prototype._encode = function (cb) {
   }
 }
 
-// TODO: Once we have instrumentation correctly marking exit spans and
-// a trace context api that can detect whether the trace context
-// has been propagated to a span or not this hard coded list
-// will be replaced with detection routines looks for exit spans
-// whose trace context has _not_ been propagated.
 Span.prototype.isCompressionEligible = function () {
   if (!this.getParentSpan()) {
     return false
   }
 
-  const subtypes = ['elasticsearch', 'redis', 'memcached', 'mongodb', 'mysql',
-    'postgresql']
+  if (this.outcome !== constants.OUTCOME_UNKNOWN &&
+      this.outcome !== constants.OUTCOME_SUCCESS
+  ) {
+    return false
+  }
 
-  return subtypes.indexOf(this.subtype) !== -1
+  if (!this._exitSpan) {
+    return false
+  }
+
+  if (this._hasPropagatedTraceContext) {
+    return false
+  }
+
+  return true
 }
 
 Span.prototype.tryToCompress = function (spanToCompress) {
