@@ -43,6 +43,9 @@ Notes:
   child spans from being added to the exit spans.  See issue for a full list of
   spans types that will be treated as exit spans. ({issues}2601[#2601])
 
+* Span compression now obeys the `isCompressionEligable` rules from https://github.com/elastic/apm/blob/main/specs/agents/handling-huge-traces/tracing-spans-compress.md#eligibility-for-compression[the spec]. Span compression is enabled by default.
+  ({issues}2604[#2604])
+
 [float]
 ===== Bug fixes
 
